Add tests for main.py

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Run tests
       run: |
         pip install pytest
-        pytest
+        pytest tests/test_main.py
 
     - name: Build Docker image
       run: |
